Fin de la v1 du service messagerie
